--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,98 @@
-
-Usage:   
-  pip3 <command> [options]
-
-Commands:
-  install                     Install packages.
-  download                    Download packages.
-  uninstall                   Uninstall packages.
-  freeze                      Output installed packages in requirements format.
-  list                        List installed packages.
-  show                        Show information about installed packages.
-  check                       Verify installed packages have compatible dependencies.
-  config                      Manage local and global configuration.
-  search                      Search PyPI for packages.
-  wheel                       Build wheels from your requirements.
-  hash                        Compute hashes of package archives.
-  completion                  A helper command used for command completion.
-  debug                       Show information useful for debugging.
-  help                        Show help for commands.
-
-General Options:
-  -h, --help                  Show help.
-  --isolated                  Run pip in an isolated mode, ignoring
-                              environment variables and user configuration.
-  -v, --verbose               Give more output. Option is additive, and can be
-                              used up to 3 times.
-  -V, --version               Show version and exit.
-  -q, --quiet                 Give less output. Option is additive, and can be
-                              used up to 3 times (corresponding to WARNING,
-                              ERROR, and CRITICAL logging levels).
-  --log <path>                Path to a verbose appending log.
-  --proxy <proxy>             Specify a proxy in the form
-                              [user:passwd@]proxy.server:port.
-  --retries <retries>         Maximum number of retries each connection should
-                              attempt (default 5 times).
-  --timeout <sec>             Set the socket timeout (default 15 seconds).
-  --exists-action <action>    Default action when a path already exists:
-                              (s)witch, (i)gnore, (w)ipe, (b)ackup, (a)bort.
-  --trusted-host <hostname>   Mark this host or host:port pair as trusted,
-                              even though it does not have valid or any HTTPS.
-  --cert <path>               Path to alternate CA bundle.
-  --client-cert <path>        Path to SSL client certificate, a single file
-                              containing the private key and the certificate
-                              in PEM format.
-  --cache-dir <dir>           Store the cache data in <dir>.
-  --no-cache-dir              Disable the cache.
-  --disable-pip-version-check
-                              Don't periodically check PyPI to determine
-                              whether a new version of pip is available for
-                              download. Implied with --no-index.
-  --no-color                  Suppress colored output
-  --no-python-version-warning
-                              Silence deprecation warnings for upcoming
-                              unsupported Pythons.
+astroid==2.4.2
+attrs==19.3.0
+Automat==0.8.0
+autopep8==1.5.4
+bcrypt==3.2.0
+blinker==1.4
+certifi==2019.11.28
+cffi==1.14.3
+chardet==3.0.4
+Click==7.0
+cloud-init==20.3
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+crcmod==1.7
+cryptography==2.8
+cssmin==0.2.0
+dbus-python==1.2.16
+distro==1.4.0
+distro-info===0.23ubuntu1
+dnspython==2.0.0
+email-validator==1.1.2
+entrypoints==0.3
+Flask==1.1.2
+Flask-Assets==2.0
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+httplib2==0.14.0
+hyperlink==19.0.0
+idna==2.8
+importlib-metadata==1.5.0
+incremental==16.10.1
+isort==5.5.3
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jsmin==2.2.2
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lazy-object-proxy==1.4.3
+lesscpy==0.14.0
+MarkupSafe==1.1.0
+mccabe==0.6.1
+more-itertools==4.2.0
+netifaces==0.10.4
+oauthlib==3.1.0
+Pillow==8.0.1
+ply==3.11
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycodestyle==2.6.0
+pycparser==2.20
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pylint==2.6.0
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
+pylint-plugin-utils==0.6
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyrsistent==0.15.5
+pyserial==3.4
+python-apt==2.0.0+ubuntu0.20.4.1
+python-debian===0.1.36ubuntu1
+PyYAML==5.3.1
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.14.0
+SQLAlchemy==1.3.20
+ssh-import-id==5.10
+systemd-python==234
+toml==0.10.1
+Twisted==18.9.0
+ubuntu-advantage-tools==20.3
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+wadllib==1.3.3
+webassets==2.0
+Werkzeug==1.0.1
+wrapt==1.12.1
+WTForms==2.3.3
+zipp==1.0.0
+zope.interface==4.7.1
